Added close chat functionality with &times;

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="survey">
       <div class="header-container">
         <header class="header">
-          <a href="#"><img class="header-brand" src="./images/logo.png" alt="brand logo" /></a>
+          <a href="https://www.nuance.com/"><img class="header-brand" src="./images/logo.png" alt="brand logo" /></a>
           <a href="/#close" class="header-close">&times;</a>
         </header>
       </div>
