Added styles for state dropdown

--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
         </header>
       </div>
       <div class="survey-form">
-        <h3 class="form survey-intro">How can we help you?</h3>
+        <h3 class="survey-intro">How can we help you?</h3>
         <form name="nuance" class="form">
           <!-- Name -->
-          <div class="form form-name">
+          <div class="form-name">
             <label for="form_full-name" class="form-title">* Full Name</label>
             <input type="text" id="form_full-name" name="fullName" class="form-input" value="John Doe"/>
           </div>
           <br />
 
           <!-- Phone Num -->
-          <div class="form form-phone">
+          <div class="form-phone">
             <label for="form_phone-num" class="form-title">* Phone Number</label>
             <input type="text" id="form_phone-num" name="phoneNum" value="888-123-4567" class="form-input"/>
           </div>
 
           <!-- State -->
-          <div class="form dropdown">
+          <div class="dropdown">
             <label for="form_state" class="form-title">* State</label>
-            <select id="form_state" name="state" size="1" class="form-input">
+            <select id="form_state" name="state" size="1" class="form-input--select">
               <option value="Please select a state">Please select a state</option>
               <option value="AK">AK</option>
               <option value="AL">AL</option>
@@ -95,7 +95,7 @@
             </select>
           </div>
           <!-- PDYQ Textbox -->
-          <div class="form wrapper">
+          <div class="wrapper">
             <label for="form_describe-text" class="form-title">* Please describe your question</label>
             <input id="form_describe-text" type="text" name="describeText" class="form-input"/>
           </div>
